--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # TradingAgents-CN v1.0.0-preview Docker Compose配置
 # 支持前后端分离部署
 
@@ -23,6 +21,8 @@ services:
     env_file:
       - .env
     environment:
+      MONGODB_HOST: mongodb
+      REDIS_HOST: redis
       PYTHONUNBUFFERED: 1
       PYTHONDONTWRITEBYTECODE: 1
       TZ: "Asia/Shanghai"
@@ -70,6 +70,8 @@ services:
     container_name: tradingagents-frontend
     ports:
       - "3000:80"
+    volumes:
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
     environment:
       TZ: "Asia/Shanghai"
       # 后端API地址
